fixed the shop images not showing

--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -615,7 +615,7 @@
       flex-direction: column;
       &__visual {
         width: 100%;
-        height: auto;
+        height: 100%;
         margin-bottom: 20px;
         &:before {
           content: '';
